--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@ body, html {
 }
 .hero-text h1 {
   font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   font-style: normal;
   font-size: 3em;
 }
@@ -67,12 +68,13 @@ button:hover{
 #about-page{
   background-color: #0b739d;
   color: white;
-  height: 600px ;
+  height: 520px ;
   margin-top: 0;
   text-align: center;
 }
 .about-us h1{
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif !important;
+  font-weight:700;
   font-style: normal;
   text-align: center;
   padding: 15px;
@@ -102,7 +104,8 @@ font-size: 25px;
 
 .about-us hr{
   color: white;
-  width: 70%;
+  width: 100%;
+  align-self: center;
 }
 
 /**SERVICES PAGE STYLING**/
@@ -111,29 +114,82 @@ font-size: 25px;
   height: 100%;
   margin: 0;
 }
-.services-maintext{
+.services-maintext h1{
   background-color:white;
   color: #0b739d;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif !important;
+  font-weight: 700;
   font-style: normal;
   text-align: center;
+  padding: 10px;
   font-size: 2.5em;
 }
 .first-service{
   margin: 0;
+   display: flex;          /* Enables flexbox */
+  align-items:normal
 }
 .first-service img{
-width:50%;
-height:25%;
 display: flex;
 justify-self: left;
 
 }
+.first-serv-text{
+  color: #0b739d;
+}
+/**flipcard material**/
+.flip-card {
+  width: 75%;
+  height: 100;
+  perspective: 1000px;
+ 
+}
+@media(max-width:600px){
+  .flip-card{
+    font-size: 7px;
+  }
+}
 
+.flip-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+.flip-card:hover .flip-inner {
+  transform: rotateY(180deg);
+  
+}
+.flip-card:hover .service-heading{
+  backface-visibility: hidden;
+}
+.flip-front, .flip-back {
+  display: flex;
+  flex-direction: column;      /* Ensures content stays in a row */
+  align-items: center;      /* Vertically centers content */
+  justify-content: space-around; /* Spaces items evenly */
+  padding: 5px;            /* Prevents text from touching edges */
+  box-sizing: border-box;   /* Includes padding in the width calculation */
+  overflow: hidden;         /* Ensures nothing spills out */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform: rotateX(0deg);
+  border-radius: 8px;
+  font-size: 1.4 rem;
+  color: white;
+}
+.flip-back {
+  transform: rotateY(180deg);
+}
 .second-service img{
-  width: 50%;
+  width: 25%;
   height: 25%;
 display: flex;
+
   justify-self: end;
 }
 @media (min-width:768px){
@@ -144,14 +200,14 @@ display: flex;
 }
 
 .third-service img{
-  width:50%;
+  width:25%;
 height:25%;
 display: flex;
 justify-self: left;
 }
 
 .fourth-service img{
-  width:50%;
+  width:25%;
 height:25%;
 display: flex;
 justify-self:end;
