--- a/style/style.css
+++ b/style/style.css
@@ -163,3 +163,13 @@ font-size: 10px;
   }
 }
 
+a{
+  font-size: 15px;
+  font-style: italic;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+}
+footer{
+  text-align:center;
+}
